# worklarkpy

./: .gitignore  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
authentication/: urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/templates/authentication/: login.html
authentication/templates/registration/: password_reset_done.html
job_board/: apps.py  models.py  urls.py  views.py
job_board/migrations/: 0001_initial.py
job_board/templates/: base.html
job_board/templates/job_board/: 404.html  employer.html  employer_new.html  employers.html  job_listing.html  job_listing_new.html  job_listings.html
jobboard/: admin.py  models.py  urls.py  views.py
jobboard/migrations/: 0001_initial.py
jobboard/templates/jobboard/: detail.html  employer.html  employers.html
waitlist/: admin.py  models.py
waitlist/migrations/: 0001_initial.py
website/: views.py
website/templates/website/: home.html
worklark/: asgi.py  settings.py  urls.py  wsgi.py
